--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.designpatterns</groupId>
-    <artifactId>RecipeManagementSystem</artifactId>
+    <artifactId>project</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Specify the main class here -->
+        <main.class>com.designpatterns.Main</main.class>
     </properties>
+
+    <build>
+        <plugins>
+            <!-- Use the maven-jar-plugin to specify the main class -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>${main.class}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+        <finalName>${project.artifactId}</finalName>
+    </build>
 
 </project>
